# usb-i2c-bridge

./: .embed.toml  Cargo.toml  README.md
.cargo/: config
src/: main.rs
