[package]
name = "usb-i2c"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.6"
cortex-m-rt = "0.7.1"
stm32f1xx-hal = { version = "0.10.0", features = ["stm32f103", "rt"] }
cortex-m-rtic = "1.1.4"
heapless = "0.7.16"
usb-device = "0.2.8"
usbd-serial = "0.1.1"
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
systick-monotonic = "1.0.0"